[gd_scene load_steps=12 format=3 uid="uid://deuikyuhwt5hh"]

[ext_resource type="Script" uid="uid://7wket8ignrvb" path="res://Scripts/Laser.gd" id="1_lajnd"]
[ext_resource type="Script" uid="uid://dpipguhgsdyp" path="res://Scripts/Kill.gd" id="2_fnabd"]
[ext_resource type="PackedScene" uid="uid://dcffkw40agn87" path="res://Scenes/Particles/Red.tscn" id="2_v84id"]
[ext_resource type="AudioStream" uid="uid://bwupgjcbia7eo" path="res://Sounds/Beep.mp3" id="4_2kwlm"]
[ext_resource type="AudioStream" uid="uid://dw4i1wbgx1mbv" path="res://Sounds/Buzz.mp3" id="5_smymd"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_sw4d1"]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_lajnd"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_v84id"]
colors = PackedColorArray(1, 0, 0, 1, 1, 0, 0, 1)

[sub_resource type="Animation" id="Animation_fnabd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Beep:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_v84id"]
resource_name = "Turn_Off"
length = 2.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2, 2.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Beep:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, true, true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fnabd"]
_data = {
&"RESET": SubResource("Animation_fnabd"),
&"Turn_Off": SubResource("Animation_v84id")
}

[node name="Laser" type="Node2D"]
visible = false
z_index = 99
script = ExtResource("1_lajnd")
Min = 5
Max = 10

[node name="Line_2" type="Line2D" parent="."]
modulate = Color(1, 0, 0, 0.047058824)
material = SubResource("CanvasItemMaterial_sw4d1")
points = PackedVector2Array(0, 0, 0, 50)
width = 140.0
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 20

[node name="Line_1" type="Line2D" parent="."]
modulate = Color(1, 1, 1, 0.49803922)
material = SubResource("CanvasItemMaterial_lajnd")
points = PackedVector2Array(0, 0, 0, 50)
width = 8.0
gradient = SubResource("Gradient_v84id")
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line_3" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 50)
width = 2.0
begin_cap_mode = 2
end_cap_mode = 2

[node name="Area2D" type="Area2D" parent="."]
monitoring = false
script = ExtResource("2_fnabd")

[node name="Polygon" type="CollisionPolygon2D" parent="Area2D"]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Red2" parent="." instance=ExtResource("2_v84id")]
position = Vector2(0, 50)
emitting = false

[node name="Red" parent="." instance=ExtResource("2_v84id")]
emitting = false

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fnabd")
}

[node name="On_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="On_Timer_2" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Beep" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 23)
stream = ExtResource("4_2kwlm")
volume_db = -15.0
pitch_scale = 2.0

[node name="Buzz" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 23)
stream = ExtResource("5_smymd")
volume_db = -33.0

[connection signal="body_entered" from="Area2D" to="Area2D" method="Body_Entered"]
[connection signal="timeout" from="Timer" to="." method="Timeout"]
[connection signal="timeout" from="On_Timer" to="." method="On_Timer_Timeout"]
